--- a/style.css
+++ b/style.css
@@ -3,9 +3,8 @@ text-align: center;
 }
 
 canvas {
-  border: 2px;
-  border-color: grey;
-  
+  border: 2px solid grey;
+
 }
 
 #base {
@@ -31,6 +30,5 @@ canvas {
 #controls-panel {
   margin: 20px;
   float: left;
-
-  /*background-color: blue;*/
+/*background-color: blue;*/
 }
