--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-text-align: center;
+  text-align: center;
+  background-color: black;
 }
 
 canvas {
@@ -8,16 +9,21 @@ canvas {
 }
 
 #base {
+  margin: 0;
   width: 100%
   height: 1600;
   background-color: black;
 }
 
 #main-container {
-  margin: auto;
+  margin: auto;;
   width: 65%;
-  background-color: white;
+  background-image: url("assets/wooden-cork-background.jpg");
+}
 
+#title {
+  margin: 0;
+  padding: 50;
 }
 
 #input-panel {
@@ -31,4 +37,10 @@ canvas {
   margin: 20px;
   float: left;
 /*background-color: blue;*/
+}
+
+h1, h2, h3, p {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: inherit;
+  color: #404040;
 }
